# json-register

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.sh  lint.sh  publish.sh  test.sh
src/: cache.rs  canonicalise.rs  db.rs  errors.rs  lib.rs
tests/: integration_test.rs  test_config_validation.py  test_python_canonicalise.py  test_python_integration.py
