[package]
name = "json-register"
version = "0.1.3"
edition = "2021"
description = "A Rust library for registering JSON objects in PostgreSQL with canonicalisation and caching"
license = "Apache-2.0"
repository = "https://github.com/telicent-oss/json-register"
readme = "README.md"
keywords = ["json", "canonicalisation", "postgresql", "database", "cache"]
categories = ["database", "encoding"]

[lib]
name = "json_register"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:pythonize"]
extension-module = ["pyo3/extension-module", "python"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["abi3-py38"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.16.2"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3", "with-serde_json-1"] }
deadpool = "0.12"
deadpool-postgres = "0.14"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
webpki-roots = "1.0"
thiserror = "2.0"
pythonize = { version = "0.27.0", optional = true }

[dev-dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3", "with-serde_json-1"] }
deadpool-postgres = "0.14"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

