[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "json-register"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "psycopg[binary]>=3.0.0",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["tests"]


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C4", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["extension-module"]
