[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "json-register-rust"
dynamic = ["version"]
description = "A Python library for registering JSON objects in PostgreSQL with canonicalisation and caching"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [
    { name = "Telicent Ltd" }
]
keywords = ["json", "canonicalisation", "postgresql", "database", "cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/telicent-oss/json-register"
Repository = "https://github.com/telicent-oss/json-register"
Issues = "https://github.com/telicent-oss/json-register/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "psycopg[binary]>=3.0.0",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["tests"]


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C4", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["extension-module"]
